src/snapshots/afrotd__parser__tests__rule_2.11.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 11
  - 1
title: Fumble
text: "Fumbeln des Balles ist der Verlust des Ballbesitzes eines Spielers durch irgendeine Aktion, ausgenommen Passen, Kicken oder erfolgreiches Übergeben des Balles (A.R. 2.19.2.I, A.R. 4.1.3.I). Der Status des Balles ist ein Fumble."
interpretations: []
