src/snapshots/afrotd__parser__tests__rule_2.11.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 11
  - 2
title: Muff
text: Muffen ist die Berührung des Balles beim erfolglosen Versuch des Fangens oder Recoverns. Muffen des Balles ändert nicht dessen Status.
interpretations: []
